#32 - Setting client width and height universally and using safer source with fallback - Updating references to client width and height to use new single source - Updating touch controls to use correct element

--- a/client/src/templates/partials/ui/targeting_list.pug
+++ b/client/src/templates/partials/ui/targeting_list.pug
@@ -96,20 +96,20 @@
 
         .left {
             width: 175px;
+            padding: 0 1rem;
         }
         .right {
             width: 275px;
+            padding: 1rem;
         }
 
         .target_icon {
-            width: calc(100% - 2rem);
-            padding: 1rem;
+            width: 100%;
             height: auto;
         }
 
         table {
             border: 0px none;
-            padding: 4rem;
         }
 
         table td {
