--- a/client/src/templates/partials/ui/targeting_list.pug
+++ b/client/src/templates/partials/ui/targeting_list.pug
@@ -4,10 +4,10 @@
         z-index: 4;
         font-family: monospace;
         text-shadow: 1px 1px grey;
-        background: rgba(0,0,0,0.25);
+        background: rgba(0,0,0,0.4);
         resize: both;
         overflow: auto;
-        color: #CCC;
+        color: #EFE;
         pointer-events: bounding-box;
         backdrop-filter: blur(2px);
         border: solid 1px rgba(0,0,0,0.25);
@@ -82,11 +82,11 @@
     }
     #ui-targeting-list {
         top: 1vh;
-        left: 1vw;
+        left: 1vh;
     }
 
     #ui-active-target {
-        bottom: 1vh;
+        top: 380px;
         left: 1vh;
 
         .card {
@@ -95,11 +95,11 @@
         }
 
         .left {
-            width: 175px;
-            padding: 0 1rem;
+            width: 150px;
+            padding: 0 0 0 1rem;
         }
         .right {
-            width: 275px;
+            width: 250px;
             padding: 1rem;
         }
 
