#32 - Moving scanner overlays to a new game overlay, changing colours, setting offscreen targets to be on the screen edge

--- a/client/src/styles/ui/overlay.styl
+++ b/client/src/styles/ui/overlay.styl
@@ -1,3 +1,4 @@
+#game_overlay,
 #ui_overlay {
     position: absolute;
     z-index: 5;
@@ -26,4 +27,8 @@
     --cnt-vp: var(--tp-container-vertical-padding, 10px);
     --cnt-usp: var(--tp-container-unit-spacing, 10px);
     --cnt-usz: var(--tp-container-unit-size, 40px);
+}
+
+#game_overlay {
+    z-index: 4
 }
