--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -23,6 +23,8 @@ html(lang='en')
             #main_menu
             #object_editor
             #scene_overview
+        #game_overlay
+            #scanner_targets
         #templates
             script#scene_overview_table(type='html_template_in_a_script_tag')
                 include ./partials/ui/menus/scene_overview-table.pug
