#32 - Moving HUD to game overlay and tweaking offscreen target coordinates

--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -24,6 +24,7 @@ html(lang='en')
             #object_editor
             #scene_overview
         #game_overlay
+            #hud
             #scanner_targets
         #templates
             script#scene_overview_table(type='html_template_in_a_script_tag')
