--- a/client/src/styles/ui/overlay.styl
+++ b/client/src/styles/ui/overlay.styl
@@ -34,6 +34,24 @@
     .scanner-target {
         position: absolute;
         z-index: 0;
+        .targeting-effect {
+            display: none;
+            width: 40px;
+            height: 40px;
+            position: absolute;
+            right: -12px;
+            bottom: -12px;
+            animation: scale 0.3s infinite ease-in-out;
+
+            .border {
+                border-radius: 100%;
+                border: dashed 1px rgba(200, 0, 200, 1);
+                width: 100%;
+                height: 100%;
+                animation: rotate 2.5s infinite linear;
+            }
+
+        }
         .symbol {
             border: solid 1px rgba(0, 255, 0, 1);
             width: 10px;
@@ -43,3 +61,20 @@
     }
 }
 
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes scale {
+    0%, 100% {
+        transform: scale(0.8);
+    }
+    50% {
+        transform: scale(1.2);
+    }
+}
