--- a/client/src/styles/ui/overlay.styl
+++ b/client/src/styles/ui/overlay.styl
@@ -34,6 +34,7 @@
     .scanner-target {
         position: absolute;
         z-index: 0;
+        
         .targeting-effect {
             display: none;
             width: 40px;
@@ -42,6 +43,10 @@
             right: -12px;
             bottom: -12px;
             animation: scale 0.3s infinite ease-in-out;
+
+            ^[-1].active ^[2..2] {
+                display: block;
+            }
 
             .border {
                 border-radius: 100%;
@@ -53,11 +58,18 @@
 
         }
         .symbol {
-            border: solid 1px rgba(0, 255, 0, 1);
+            background: none;
+            border: solid 1px rgba(0, 0, 200, 1);
             width: 10px;
             height: 10px;
             transform: rotate(45deg);
+
+            ^[-1].active ^[2..2] {
+                background: rgba(200, 0, 200, 0.5);
+                border: solid 1px rgba(200, 0, 200, 1);
+            }
         }
+
     }
 }
 
