--- a/client/src/styles/ui/overlay.styl
+++ b/client/src/styles/ui/overlay.styl
@@ -42,10 +42,18 @@
             position: absolute;
             right: -12px;
             bottom: -12px;
-            animation: scale 0.3s infinite ease-in-out;
+            animation: scale 0.6s infinite ease-in-out;
 
-            ^[-1].active ^[2..2] {
+            ^[-1].tracking ^[2..2] {
                 display: block;
+            }
+
+            ^[-1].locking ^[2..2] {
+                animation: scale 0.3s infinite ease-in-out;
+            }
+
+            ^[-1].locked ^[2..2] {
+                animation: none;
             }
 
             .border {
@@ -53,7 +61,15 @@
                 border: dashed 1px rgba(200, 0, 200, 1);
                 width: 100%;
                 height: 100%;
-                animation: rotate 2.5s infinite linear;
+                animation: rotate 5s infinite linear;
+
+                ^[-2].locking ^[3..3] {
+                    animation: rotate 2.5s infinite linear;
+                }
+                ^[-2].locked ^[3..3] {
+                    border: ridge 2px rgba(200, 0, 200, 1);
+                    animation: none;
+                }
             }
 
         }
@@ -64,9 +80,9 @@
             height: 10px;
             transform: rotate(45deg);
 
-            ^[-1].active ^[2..2] {
+            ^[-1].tracking ^[2..2] {
                 background: rgba(200, 0, 200, 0.5);
-                border: solid 1px rgba(200, 0, 200, 1);
+                border: solid 2px rgba(200, 0, 200, 1);
             }
         }
 
