#32 - Beginning work on minimap, aligning control colours

--- a/client/src/styles/game_client.styl
+++ b/client/src/styles/game_client.styl
@@ -1,4 +1,5 @@
 @import "base/core.styl";
+@import "game/controls.styl";
 @import "ui/common.styl";
 @import "ui/debugging_tools.styl";
 @import "ui/object_editor.styl";
