--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -27,6 +27,7 @@ html(lang='en')
                 div(style='color:#FFF; margin: 1rem;') Previewing Procedural Materials
         #game_overlay
             #hud
+            #map
             #scanner_targets
         #templates
             script#scene_overview_table(type='html_template_in_a_script_tag')
