#32 - Scaffolding mini map class and reorganising icons

--- a/client/src/styles/game_client.styl
+++ b/client/src/styles/game_client.styl
@@ -1,7 +1,5 @@
 @import "base/core.styl";
 @import "game/controls.styl";
-@import "ui/common.styl";
-@import "ui/debugging_tools.styl";
-@import "ui/object_editor.styl";
-@import "ui/overlay.styl";
-@import "ui/scene_overview.styl";
+@import "overlays/common.styl";
+@import "overlays/game.styl";
+@import "overlays/ui.styl";
