--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -36,8 +36,8 @@ html(lang='en')
                 include ./partials/ui/menus/scene_overview-row.pug
             template#overlays_scanner_target
                 include ./partials/overlays/scanner-target.pug
-            template#map_symbols
-                include ./partials/overlays/map-symbols.pug
+            template#map_icons
+                include ./partials/overlays/map-icons.pug
         #webgl-wrapper
             canvas#loader_symbols
             canvas#loader_image
