#32 - Adding minimap markers

--- a/client/src/styles/overlays/game.styl
+++ b/client/src/styles/overlays/game.styl
@@ -119,6 +119,12 @@
             left: calc( 50% - 6.5px );
             top: calc( 50% - 5px );
         }
+
+        .marker {
+            width: 10px;
+            height: 10px;
+            position: absolute;
+        }
     }
 
 }
