#32 - Fixing HUD lines when in portrait mode

--- a/client/src/styles/overlays/game.styl
+++ b/client/src/styles/overlays/game.styl
@@ -98,6 +98,13 @@
             top: 31.25vh;
             right: 31.25vw;
         }
+        
+        // Portrait mode styles
+
+        ^[1].portrait ^[1..1]-lines {
+            left: calc(37.5vw / 2);
+            width: 62.5vw;
+        }
     }
 
     #map {
