#32 - Hiding overlays before game mode starts and rebuilding them between modes

--- a/client/src/styles/overlays/game.styl
+++ b/client/src/styles/overlays/game.styl
@@ -121,6 +121,7 @@
     }
 
     #map {
+        display: none;
         position: absolute;
         height: @css{ max(12.5vw, 12.5vh) };
         width: @css{ max(12.5vw, 12.5vh) };
