--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
     head
         meta(charset='utf-8')
-        meta(name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1,maximum-scale=1')
+        meta(name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1,maximum-scale=1, user-scalable=0')
         meta(name="description" content=description)
 
         title= title
