--- a/client/src/styles/overlays/common.styl
+++ b/client/src/styles/overlays/common.styl
@@ -3,8 +3,8 @@
     position: absolute;
     z-index: 5;
     display: flex;
-    width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100dvh;
     pointer-events: none;
     align-items: center;
     justify-content: center;
