--- a/client/src/templates/partials/ui/targeting_list.pug
+++ b/client/src/templates/partials/ui/targeting_list.pug
@@ -81,13 +81,13 @@
        
     }
     #ui-targeting-list {
-        top: 1vh;
-        left: 1vh;
+        top: 1dvh;
+        left: 1dvh;
     }
 
     #ui-active-target {
         top: 380px;
-        left: 1vh;
+        left: 1dvh;
 
         .card {
             display: flex;
