--- a/client/src/templates/partials/ui/targeting_locked.pug
+++ b/client/src/templates/partials/ui/targeting_locked.pug
@@ -3,10 +3,10 @@
         display: flex;
         justify-content: center;
         position: absolute;
-        bottom: 1vh;
-        left: 20vw;
-        width: 60vw;
-        height: 10vh;
+        bottom: 1dvh;
+        left: 20dvw;
+        width: 60dvw;
+        height: 10dvh;
         border-radius: 1% / 5%;
         z-index: 2;
         pointer-events: none;
@@ -17,7 +17,7 @@
             font-family: monospace;
             margin: 0.25rem;
             padding: 0.25rem;
-            width: 8vw;
+            width: 8dvw;
             pointer-events: auto;
 
             &:hover {
@@ -31,7 +31,7 @@
                 height: 60%;
 
                 &.neutral {
-                    display: block;a
+                    display: block;
                     filter: hue-rotate(73deg) brightness(4.0);
                 }
             }
