#32 - Implementing touch controls for weapons

--- a/client/src/styles/overlays/ui.styl
+++ b/client/src/styles/overlays/ui.styl
@@ -22,3 +22,4 @@
 @import "ui/debugging_tools.styl";
 @import "ui/object_editor.styl";
 @import "ui/scene_overview.styl";
+@import "ui/weapon_controls.styl";
