--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -50,3 +50,4 @@ html(lang='en')
             #webgl
             include ./partials/game_client/scripts.pug
         include ./partials/ui/flight_instruments.pug
+        include ./partials/ui/weapon_controls.pug
