#32 - Adding missile fired timer and subsystem game class

--- a/client/src/styles/overlays/ui/weapon_controls.styl
+++ b/client/src/styles/overlays/ui/weapon_controls.styl
@@ -61,18 +61,18 @@
     }
 
     input:checked + .slider {
-        background: linear-gradient(rgba(150, 33, 243, 0.35) 5%, rgba(150, 33, 243, 0.15) 95%);
+        background: linear-gradient(rgba(255, 160, 51, 0.7) 5%, rgba(255, 160, 51, 0.35) 95%);
     }
 
     input:focus + .slider {
-        box-shadow: 0 0 1px #9621F3;
+        box-shadow: 0 0 1px rgb(255, 160, 51);
     }
 
     input:checked + .slider:before {
         -webkit-transform: translateX(26px);
         -ms-transform: translateX(26px);
         transform: translateX(26px);
-        background: linear-gradient(rgba(150, 33, 243, 0.35) 95%, rgba(150, 33, 243, 0.15) 5%);
+        background: linear-gradient(rgba(255, 160, 51, 0.7) 95%, rgba(255, 160, 51, 0.35) 5%);
     }
 
     /* Rounded sliders */
