--- a/docs/assets/game_client.css
+++ b/docs/assets/game_client.css
@@ -396,7 +396,8 @@ body {
 }
 #debugging_tools,
 #object_editor,
-#scene_overview {
+#scene_overview,
+#weapon_controls {
   position: absolute;
 }
 #debugging_tools {
@@ -411,4 +412,77 @@ body {
   top: 8px;
   left: 8px;
   display: none;
+}
+#weapon_controls {
+  display: none;
+  bottom: 8px;
+  right: 180px;
+  z-index: 2;
+/* The switch - the box around the slider */
+/* Hide default HTML checkbox */
+/* The slider */
+/* Rounded sliders */
+}
+#weapon_controls div.label {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 0.7rem;
+}
+#weapon_controls button {
+  width: 150px;
+  height: 150px;
+  background: radial-gradient(rgba(218,225,230,0.15) 5%, rgba(218,225,230,0.35) 95%), url("/assets/images/touchpad/attack.svg") center center no-repeat;
+  border-radius: 90px;
+  box-shadow: 0px 0px 5px rgba(194,200,204,0.55);
+}
+#weapon_controls .switch {
+  margin-top: 0.35rem;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+#weapon_controls .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+#weapon_controls .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(rgba(218,225,230,0.05) 5%, rgba(218,225,230,0.15) 95%);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+#weapon_controls .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: rgba(255,255,255,0.35);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+#weapon_controls input:checked + .slider {
+  background: linear-gradient(rgba(255,160,51,0.7) 5%, rgba(255,160,51,0.35) 95%);
+}
+#weapon_controls input:focus + .slider {
+  box-shadow: 0 0 1px #ffa033;
+}
+#weapon_controls input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+  background: linear-gradient(rgba(255,160,51,0.7) 95%, rgba(255,160,51,0.35) 5%);
+}
+#weapon_controls .slider.round {
+  border-radius: 34px;
+}
+#weapon_controls .slider.round:before {
+  border-radius: 50%;
 }
