#32 - Adding static score table UI

--- a/client/src/styles/overlays/ui.styl
+++ b/client/src/styles/overlays/ui.styl
@@ -22,4 +22,5 @@
 @import "ui/debugging_tools.styl";
 @import "ui/object_editor.styl";
 @import "ui/scene_overview.styl";
+@import "ui/score_table.styl";
 @import "ui/weapon_controls.styl";
