--- a/client/src/styles/base/core.styl
+++ b/client/src/styles/base/core.styl
@@ -1,4 +1,8 @@
-html, body {margin: 0; height: 100%; overflow: hidden}
+html, body {
+    margin: 0; height: 100%; overflow: hidden
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+}
 
 #page-wrapper {
     position: relative;
