#32 - Adding static score table UI

--- a/client/src/styles/overlays/ui/score_table.styl
+++ b/client/src/styles/overlays/ui/score_table.styl
@@ -9,6 +9,9 @@
     height: auto;
     z-index: 5;
 
+    &.active
+        display: block
+
     button
         background: black;
         border-radius: 32px;
