--- a/client/src/templates/partials/ui/score_table.pug
+++ b/client/src/templates/partials/ui/score_table.pug
@@ -1,5 +1,5 @@
 #score_table
-    button(name="Close") X
+    button( name="Close" onclick="l.ui.score_table.hide(); return false;" ) X
     h2 Rankings
     table
         thead
