--- a/client/src/styles/overlays/game.styl
+++ b/client/src/styles/overlays/game.styl
@@ -10,8 +10,8 @@
             width: 40px;
             height: 40px;
             position: absolute;
-            right: -11px;
-            bottom: -11px;
+            right: -7.5px;
+            bottom: -7.5px;
             animation: scale 0.6s infinite ease-in-out;
 
             ^[-1].tracking ^[2..2] {
@@ -43,16 +43,43 @@
             }
 
         }
+
+        &.aircraft  {
+            & path, 
+            & rect {
+                stroke-width: 20px;
+            }
+        }
+
+        &.ship {
+            & path, 
+            & rect {
+                stroke-width: 10px;
+            }
+        }
+
+        &.structure {
+            & path, 
+            & rect {
+                stroke-width: 15px;
+            }
+        }
+    
         .symbol {
             background: none;
-            border: solid 1px rgba(0, 0, 200, 1);
-            width: 10px;
-            height: 10px;
-            transform: rotate(45deg);
+            width: 20px;
+            height: 20px;
+
+            path, rect {
+                stroke: rgba(0, 0, 200, 0.5);
+                fill: none;
+            }
 
             ^[-1].tracking ^[2..2] {
-                background: rgba(200, 0, 200, 0.5);
-                border: solid 2px rgba(200, 0, 200, 1);
+                path, rect {
+                    fill: rgba(200, 0, 200, 0.5);
+                    stroke: rgba(200, 0, 200, 1);
+                }
             }
         }
 
