#32 - Hooking up score table

--- a/client/src/templates/partials/ui/score_table.pug
+++ b/client/src/templates/partials/ui/score_table.pug
@@ -7,7 +7,7 @@
                 td.
                     ID
                 td.
-                    Vehicle
+                    Name
                 td.
                     Kills
                 td.
