#32 - Adding in-game help screen and disabling multiplayer button

--- a/client/src/styles/overlays/ui.styl
+++ b/client/src/styles/overlays/ui.styl
@@ -20,6 +20,7 @@
 
 @import "ui/common.styl";
 @import "ui/debugging_tools.styl";
+@import "ui/help.styl";
 @import "ui/object_editor.styl";
 @import "ui/scene_overview.styl";
 @import "ui/score_table.styl";
