--- a/client/src/templates/game_client.pug
+++ b/client/src/templates/game_client.pug
@@ -52,5 +52,6 @@ html(lang='en')
             #webgl
             include ./partials/game_client/scripts.pug
         include ./partials/ui/flight_instruments.pug
+        include ./partials/ui/help.pug
         include ./partials/ui/score_table.pug
         include ./partials/ui/weapon_controls.pug
