#32 - Updating help text and adding v7 todo

--- a/client/src/templates/partials/ui/help.pug
+++ b/client/src/templates/partials/ui/help.pug
@@ -10,9 +10,13 @@
     p.
         Starting in 2012, the current build of Langenium is a culmination of over a decade of work.
     p.
-        Please enjoy this current build of the game!
-    p p.s. If you are a developer who would like to contribute to this project, please visit Langenium on 
+        Please enjoy this current version of the game!
+    p p.s. If you are a developer or interested in games development, visit Langenium on 
         a(href='https://github.com/OpenStudiosCo/Langenium' target="_new" title="Langenium on Github") Github
+
+    h2 Gameplay
+    p.
+        Bots and players use the same scanner and weapons subsystems for combat.
 
 
     h2 PC Controls
@@ -32,4 +36,6 @@
     p.
         The slider on the right controls elevation and the camera button can be used to peak around the scene.
     p.
-        The weapons console can be used to toggle auto attack and manually fire missiles if auto attack is off. When weapons fire, the attack button will also show the time remaining till the next attack is ready.
+        The weapons console can be used to toggle auto attack and manually fire weapons if auto attack is off.
+    p.
+        When weapons fire, the attack button shows the time remaining till the next attack is ready.
